<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memo</string>
    <string name="memostart_button1_text">Ladestationen zeigen</string>
    <string name="memostart_button2_text">Tabellen synchronisieren</string>
    <string name="memostart_button3_text">Einstellungen</string>
    <string name="memosingleton_gps_nicht_verfuegbar">Bitte GPS in allen Einstellungen aktivieren!</string>
    <string name="punktezeigen_tab_menu_item1_title">DB füllen</string>
    <string name="punktezeigen_tab_menu_item2_title">DB leeren</string>
    <string name="punktezeigen_tab_menu_item5_an_title">Pos zeigen</string>
    <string name="punktezeigen_tab_menu_item5_aus_title">Pos nicht zeigen</string>
    <string name="punktezeigen_tab_dialog_pktfiltern_title">Punkte filtern</string>
    <string name="punktezeigen_tab_dialog_pkthinzufuegen_title">Punkt hinzufügen</string>
    <string name="punktezeigen_tab_liste_asynctask_progressdialog_title">Lade Liste…</string>
    <string name="punktezeigen_tab_karte_asynctask_progressdialog_title">Lade Punkte…</string>
    <string name="punktezeigen_tab_dialog_text_name">Name</string>
    <string name="punktezeigen_tab_dialog_text_symbol">Symbol</string>
    <string name="punktezeigen_tab_dialog_text_beschreibung">Beschreibung</string>
    <string name="punktezeigen_tab_dialog_text_adresse">Adresse</string>
    <string name="punktezeigen_tab_dialog_text_eigenschaften">Eigenschaften</string>
    <string name="punktezeigen_tab_dialog_text_preis">Cent/kWh</string>
    <string name="punktezeigen_tab_dialog_text_unvollstaendig">Bitte folgende Felder ausfüllen:</string>
    <string name="punktezeigen_tab_dialog_text_abbrechen">Abbrechen</string>
    <string name="punktezeigen_tab_dialog_text_navigiere">Hierhin navigieren</string>
    <string name="navigation_text_navigation_beenden">Navigation beenden</string>
    <string name="navigation_text_aktuelle_position_an">Position verfolgen</string>
    <string name="navigation_text_aktuelle_position_aus">Position nicht verfolgen</string>
    <string name="navigation_text_meter">Meter</string>
    <string name="navigation_text_kilometer">Kilometer</string>
    <string name="punktezeigen_tab_dialog_button_text_ok">OK</string>
    <string name="punktezeigen_tab_dialog_button_text_zeige_karte">Auf Karte anzeigen</string>
    <string name="datum_text">Datum</string>
    <string name="fehler_text">Fehler</string>
    <string name="kein_internet_text">kein Internetzugang</string>
    <string name="navigation_asynctask_dialog_text_empfange_daten">Empfange Daten</string>
    <string name="verarbeitung_text">Verarbeitung</string>
    <string name="elemente_hinzugefuegt_text">Elemente wurden dem Bestand hinzugefügt.</string>
    <string name="navigation_asynctask_dialog_text_dekodiere">Dekodiere</string>
    <string name="navigation_asynctask_dialog_text_erzeuge_pfade">Erzeuge Pfade</string>
    <string name="punktezeigen_tab_dialog_pkthinzufuegen_checkBox1_text">Position per GPS</string>
    <string name="punktezeigen_tab_dialog_text_null">0</string>
    <string name="punktezeigen_tab_dialog_pkthinzufuegen_radio0_text">Drehstrom</string>
    <string name="punktezeigen_tab_dialog_pkthinzufuegen_radio1_text">Gleichstrom</string>
    <string name="punktezeigen_tab_dialog_pkthinzufuegen_db_gescheitert">Fehler beim Einfügen des Punktes!</string>
    <string name="punktezeigen_tab_dialog_pkthinzufuegen_db_erfolgreich">Eintrag hinzugefügt.</string>
    <string name="punktezeigen_tab_liste_karteanzeigen">neue Einträge</string>
    <string name="punktezeigen_tab_karte_karteanzeigen">neue Punkte</string>
    <string name="punktezeigen_tab_karte_tts_nicht_aktiviert">TTS nicht aktiviert</string>
    <string name="punktezeigen_tab_karte_tts_sprache_nicht">TTS Sprache nicht verfügbar</string>
    <string name="lat_kurz">Lat:</string>
    <string name="lon_kurz">Lon:</string>
    <string name="kein_bild">Kein Bild verfügbar</string>
    <string name="punktehinzufuegen_service_notification_speichere">Speichere:</string>
    <string name="punktehinzufuegen_service_notification_bitte_warten">Bitte warten.</string>
    <string name="punktehinzufuegen_service_notification_warte_auf_gps">Warte auf GPS</string>
    <string name="punktehinzufuegen_service_notification_von">von</string>
    <string name="punktehinzufuegen_service_notification_minuten">Minute/-n</string>
    <string name="punktehinzufuegen_service_notification_gespeichert">gespeichert.</string>
    <string name="punktehinzufuegen_service_notification_vorgemerkt">vorgemerkt</string>
    <string name="punktehinzufuegen_service_notification_wird_demnaechst_gespeichert">Wird demnächst gespeichert.</string>
    <string name="memo_einstellungen_gps">GPS</string>
    <string name="memo_einstellungen_gps_benutzen">GPS benutzen</string>
    <string name="memo_einstellungen_gps_wartezeit">Wartezeit in Minuten</string>
    <string name="memo_einstellungen_gps_aktualisierungsrate">Aktualisierungsrate</string>
    <string name="memo_einstellungen_gps_karte">Karte</string>
    <string name="memo_einstellungen_gps_kartenansicht">Kartenansicht</string>
    <string name="memo_einstellungen_gps_verkehrslage">Verkehrslage</string>
    <string name="memo_einstellungen_gps_benutzen_schluessel">gps_benutzen</string>
    <string name="memo_einstellungen_gps_wartezeit_schluessel">gps_wartezeit</string>
    <string name="memo_einstellungen_gps_aktualisierungsrate_schluessel">gps_aktualisierungsrate</string>
    <string name="memo_einstellungen_gps_kartenansicht_schluessel">karte_kartenansicht</string>
    <string name="memo_einstellungen_gps_verkehrslage_schluessel">karte_verkehrslage</string>
    <!--  -->
    <string name="punkthinzufuegen_bezeichnung">Bezeichnung</string>
    <string name="punkthinzufuegen_kommentar">Kommentar</string>
    <string name="punkthinzufuegen_plz">PLZ</string>
    <string name="punkthinzufuegen_ort">Ort</string>
    <string name="punkthinzufuegen_str_nr">Straße und Nr.</string>
    <string name="punkthinzufuegen_verfuegbarkeit_anfang">Verfügbarkeit Anfang</string>
    <string name="punkthinzufuegen_verfuegbarkeit_ende">Verfügbarkeit Ende</string>
    <string name="punkthinzufuegen_verfuegbarkeit_kommentar">Verfügbarkeit Kommentar</string>
    <string name="punkthinzufuegen_land">Land</string>
    <string name="punkthinzufuegen_zugangstyp">Zugangstyp</string>
    <!--  -->
    <string-array name="punkthinzufuegen_laender_stringarray">
        <item>Deutschland</item>
        <item>England</item>
        <item>Spanien</item>
    </string-array>
    <string-array name="punkthinzufuegen_laender_werte_array">
        <item>DE</item>
        <item>EN</item>
        <item>ES</item>
    </string-array>
    <string-array name="punkthinzufuegen_zugangstyp_stringarray">
        <item>öffentlich</item>
        <item>halb-öffentlich</item>
        <item>halb-privat</item>
        <item>privat</item>
    </string-array>
    <string-array name="punkthinzufuegen_zugangstyp_werte_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <!--  -->
    <string-array name="punktezeigen_tab_dialog_pktfiltern_spinner1_stringarray">
        <item>Cent/kWh ?</item>
        <item>Cent/kWh ></item>
        <item>Cent/kWh =</item>
        <item>Cent/kWh &lt;</item>
    </string-array>
    <string-array name="memo_einstellungen_aktualisierungsrate_array">
        <item>Langsam</item>
        <item>Mittel</item>
        <item>Hoch</item>
        <item>Maximum</item>
    </string-array>
    <string-array name="memo_einstellungen_aktualisierungsrate_werte_array">
        <item>5</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="memo_einstellungen_kartenansicht_array">
        <item>Satellit</item>
        <item>Karte</item>
    </string-array>
    <string-array name="memo_einstellungen_kartenansicht_werte_array">
        <item>1</item>
        <item>-1</item>
    </string-array>

</resources>