<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/punktezeigen_tab_menu_item1"
        android:icon="@drawable/icon"
        android:title="@string/punktezeigen_tab_menu_item1_title"/>

    <item
        android:id="@+id/punktezeigen_tab_menu_item2"
        android:icon="@drawable/icon"
        android:title="@string/punktezeigen_tab_menu_item2_title"/>

    <item
        android:id="@+id/punktezeigen_tab_menu_item3"
        android:icon="@drawable/icon"
        android:title="@string/punktezeigen_tab_dialog_pkthinzufuegen_title"/>

    <item
        android:id="@+id/punktezeigen_tab_menu_item4"
        android:icon="@drawable/icon"
        android:title="@string/punktezeigen_tab_dialog_pktfiltern_title"/>

    <item
        android:id="@+id/punktezeigen_tab_menu_item5"
        android:icon="@drawable/icon"
        android:title="@string/punktezeigen_tab_menu_item5_an_title"/>

</menu>