<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="punkteZeigen"
        android:text="@string/memostart_button1_text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="serverSynchronisieren"
        android:text="@string/memostart_button2_text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="einstellungenZeigen"
        android:text="@string/memostart_button3_text" />

</LinearLayout> <!-- android:layout_margin="20dp" -->
<!-- android:padding="30dp" -->
